# MiniClaw

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_WALKTHROUGH.md  README.md  README_CN.md  ROADMAP.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: demo.py  demo_context_compression.py  demo_memory.py  demo_project_analysis.py  demo_recovery.py  demo_tasks.md
src/miniclaw/: __init__.py  agent_loop.py  cli.py  context.py  json_parser.py  memory.py  recovery.py  tool_registry.py  trace.py
src/miniclaw/agent/: __init__.py  async_loop.py  config.py  context.py  executor.py  loop.py  parser.py  prompts.py  recovery.py  state.py  trace.py
src/miniclaw/llm/: __init__.py  base.py  fake.py  openai.py  openai_client.py
src/miniclaw/memory/: __init__.py  base.py  composite.py  extractor.py  manager.py  mem0_store.py  vector.py
tests/: test_agent_context.py  test_agent_loop.py  test_agent_parser.py  test_async_loop.py  test_cli.py  test_composite_backend.py  test_config.py  test_conflict_resolution.py  test_context.py  test_executor.py  test_fake_llm.py  test_file_tools.py  test_json_parser.py  test_llm_extractor.py  test_main_cli.py  test_mcp_adapter.py  test_mem0_store.py  test_memory.py  test_memory_backend.py  test_memory_decay.py  test_multiagent.py  test_openai_client.py  test_openapi_adapter.py  test_permissions.py  test_recovery.py  test_sandbox.py  test_search_tool.py  test_shell_tool.py  test_storage.py  test_tool_registry.py  test_tool_timeout.py  test_tools.py  test_trace.py  test_trace_html.py  test_vector_memory.py
(+19 files in other folders)
