[project]
name = "miniclaw"
version = "0.1.0"
description = "A lightweight, self-built Agent Harness — no LangChain, no AutoGen, no CrewAI."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "openai>=1.0",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
miniclaw = "miniclaw.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/miniclaw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
