[project]
name = "miniclaw"
version = "0.4.0"
description = "A lightweight, self-built Agent Harness — no LangChain, no AutoGen, no CrewAI."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "openai>=1.0",
    "tiktoken>=0.7",
    "pydantic>=2.0",
    "mem0ai>=0.1",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
miniclaw = "miniclaw.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/miniclaw"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short -p no:cacheprovider --basetemp=.test-tmp"

[tool.ruff]
target-version = "py311"
line-length = 100
